# multi-agent-cli

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  security.yml
configs/: agents.yaml.example  workflows.yaml.example
docs/: API.md  ARCHITECTURE.md  CLI_REFERENCE.md  CONFIGURATION.md
examples/: basic_pm_run.py  custom_reporter.py  parallel_analysis.py  sequential_workflow.py
src/multi_agent_cli/: __init__.py  cli.py  config.py  coordinator.py  exceptions.py  executor.py  factory.py  metrics.py  reporters.py
src/multi_agent_cli/models/: __init__.py  agent.py  results.py  workflow.py
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py
tests/integration/: __init__.py  test_parallel_execution.py  test_single_agent.py  test_workflows.py
tests/unit/: __init__.py  test_cli.py  test_config.py  test_coordinator.py  test_executor.py  test_factory.py  test_metrics.py  test_models.py  test_reporters.py
